--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,12 @@
 body {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: blue;
+  background-color: grey;
+}
+
+button {
+  font-size: 40px;
 }
